--- a/m_1up_home.html
+++ b/m_1up_home.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,7 +30,7 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+
         <div id="m_1up_home_title">
             <img src="img/mobile/m_1up_home_title.png" />
         </div>
@@ -38,20 +38,24 @@
             <img src="img/mobile/m_1up_home_contents.png" />
         </div>
         <div id="m_1up_home_go">
-            <img src="img/mobile/m_1up_home_go.png" />
+            <a href="m_1up_game.html">
+                <img src="img/mobile/m_1up_home_go.png" />
+            </a>
         </div>
         <div id="m_1up_home_pd">
             <img src="img/mobile/m_1up_home_pd.png" />
         </div>
-        
+
         <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+            <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
-        <!--<div id="nav_home">
-            <img src="img/mobile/nav_home.png" />
-        </div>-->
+        <div id="nav_home">
+            <a href="m_otc_home.html">
+                <img src="img/mobile/nav_home.png" />
+            </a>
+        </div>
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
