--- a/m_2up_fail.html
+++ b/m_2up_fail.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,7 +30,7 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+
         <div id="m_2up_fail_bg">
             <img src="img/mobile/m_2up_fail_bg.png" />
         </div>
@@ -38,26 +38,31 @@
             <img src="img/mobile/m_2up_fail_title.png" />
         </div>
         <div id="m_2up_fail_img">
-            <img src="img/mobile/m_2up_fail_img.png" />
+            <!--<img src="img/mobile/m_2up_fail_img.png" />-->
         </div>
         <div id="m_2up_fail_friend">
             <img src="img/mobile/m_2up_fail_friend.png" />
         </div>
         <div id="m_2up_fail_number">
-            <img src="img/mobile/m_2up_fail_number.png" />
+            150 + 150
+            <!--<img src="img/mobile/m_2up_fail_number.png" />-->
         </div>
         <div id="m_2up_fail_total_number">
-            <img src="img/mobile/m_2up_fail_total_number.png" />
+            999
+            <!--<img src="img/mobile/m_2up_fail_total_number.png" />-->
         </div>
         <div id="m_2up_fail_total_again">
-            <img src="img/mobile/m_2up_fail_total_again.png" />
+            <a href="m_2up_home.html">
+                <img src="img/mobile/m_2up_fail_total_again.png" />
+            </a>
         </div>
         <div id="m_2up_fail_total_remark">
-            <img src="img/mobile/m_2up_fail_total_remark.png" />
+            差<span id="m_2up_fail_total_remark_more">10</span>分就有優惠囉！
+            <!--<img src="img/mobile/m_2up_fail_total_remark.png" />-->
         </div>
-        
+
         <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+            <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
