--- a/m_2up_result_me.html
+++ b/m_2up_result_me.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,7 +30,7 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+
         <div id="m_2up_result_me_bg">
             <img src="img/mobile/m_2up_result_me_bg.png" />
         </div>
@@ -48,12 +48,14 @@
             <!--<img src="img/mobile/m_2up_result_me_number.png" />-->
         </div>
         <div id="m_2up_result_me_coupon">
-            <img src="img/mobile/m_2up_result_me_coupon.png" />
+            <a href="m_coupon.html">
+                <img src="img/mobile/m_2up_result_me_coupon.png" />
+            </a>
         </div>
         <div id="m_2up_result_me_total_number">
             <!--<img src="img/mobile/m_2up_result_me_total_number.png" />-->999
         </div>
-        
+
         <!--<div id="nav_exchange">
             <a href="m_coupon_list.html"  target="_self">
                 <img src="img/mobile/nav_exchange.png" />
