--- a/m_facebook_share.html
+++ b/m_facebook_share.html
@@ -44,7 +44,9 @@
             </a>
         </div>
         <div id="nav_home">
-            <img src="img/mobile/nav_home.png" />
+            <a href="m_otc_home.html">
+                <img src="img/mobile/nav_home.png" />
+            </a>
         </div>
         <div id="logo">
             <img src="img/mobile/logo.png" />
