--- a/m_otc_home.html
+++ b/m_otc_home.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,7 +30,7 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+
         <div id="m_otc_home_title">
             <img src="img/mobile/m_otc_home_title.png" />
         </div>
@@ -38,14 +38,18 @@
             <img src="img/mobile/m_otc_home_contents.png" />
         </div>
         <div id="m_otc_home_1up">
-            <img src="img/mobile/m_otc_home_1up.png" />
+            <a href="m_1up_home.html">
+                <img src="img/mobile/m_otc_home_1up.png" />
+            </a>
         </div>
         <div id="m_otc_home_2up">
-            <img src="img/mobile/m_otc_home_2up.png" />
+            <a href="m_2up_home.html">
+                <img src="img/mobile/m_otc_home_2up.png" />
+            </a>
         </div>
-        
+
         <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+            <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
