--- a/m_2up_home.html
+++ b/m_2up_home.html
@@ -18,9 +18,9 @@
     <meta property="og:site_name" content="this is site name" />
     <meta property="og:description" content="this is description" />
     <!--End of facebook meta-->
-    
+
     <link rel="stylesheet" href="css/mobile.css" type="text/css">
-    
+
 </head>
 
 <body>
@@ -38,19 +38,23 @@
             <img src="img/mobile/m_2up_home_contents.png" />
         </div>
         <div id="m_2up_home_go">
-            <img src="img/mobile/m_2up_home_go.png" />
+            <a href="m_2up_copylink.html">
+                <img src="img/mobile/m_2up_home_go.png" />
+            </a>
         </div>
         <div id="m_2up_home_pd">
             <img src="img/mobile/m_2up_home_pd.png" />
         </div>
         <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+            <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
+        </div>        
+        <div id="nav_home">
+            <a href="m_otc_home.html">
+                <img src="img/mobile/nav_home.png" />
+            </a>
         </div>
-        <!--<div id="nav_home">
-            <img src="img/mobile/nav_home.png" />
-        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
