--- a/m_2up_result_friend.html
+++ b/m_2up_result_friend.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,7 +30,7 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+
         <div id="m_2up_result_friend_bg">
             <img src="img/mobile/m_2up_result_friend_bg.png" />
         </div>
@@ -53,14 +53,17 @@
         <div id="m_2up_result_friend_contents">
             <img src="img/mobile/m_2up_result_friend_contents.png" />
         </div>
-        
+
         <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+            <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
+
         <div id="nav_home" style="left: 498px;">
-            <img src="img/mobile/nav_home.png" />
+            <a href="m_otc_home.html">
+                <img src="img/mobile/nav_home.png" />
+            </a>
         </div>
         <div id="logo">
             <img src="img/mobile/logo.png" />
