--- a/m_coupon_comfirm.html
+++ b/m_coupon_comfirm.html
@@ -2,10 +2,10 @@
 <html lang="zh_TW">
 
 <head>
-   <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <meta charset="utf-8" />
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
@@ -30,12 +30,21 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
+        <div id="m_1up_coupon_comfirm_coupon">
+            <!--<img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
+            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />-->
+            <img src="img/mobile/m_1up_coupon_comfirm_coupon.png" />
+        </div>
+
         <div id="m_2up_coupon_comfirm_use">
-            <img src="img/mobile/m_2up_coupon_comfirm_use.png" />
+            <a href="m_facebook_share.html">
+                <img src="img/mobile/m_2up_coupon_comfirm_use.png" />
+            </a>
         </div>
         <div id="m_2up_coupon_comfirm_cancle">
-            <img src="img/mobile/m_2up_coupon_comfirm_cancle.png" />
+            <a href="m_coupon.html">
+                <img src="img/mobile/m_2up_coupon_comfirm_cancle.png" />
+            </a>
         </div>
         <!--<div id="m_2up_coupon_comfirm_coupon1">
             <img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
@@ -43,12 +52,8 @@
         <div id="m_2up_coupon_comfirm_coupon2">
             <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />
         </div>-->
-        <div id="m_1up_coupon_comfirm_coupon">
-            <!--<img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
-            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />-->
-            <img src="img/mobile/m_1up_coupon_comfirm_coupon.png" />
-        </div>
-        
+
+
         <!--<div id="nav_exchange">
             <a href="m_coupon_list.html"  target="_self">
                 <img src="img/mobile/nav_exchange.png" />
