--- a/game_2up_copylink.html
+++ b/game_2up_copylink.html
@@ -80,10 +80,11 @@
     <script src="js/BaseUtil.min.js"></script>
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
+    <script src="js/jquery.clipboard.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
     <script src="js/subway/navfacebookshare.js"></script>
-    <script src="js/subway/game-2up-start.js"></script>
-    <script src="js/subway/game-2up-start-animation.js"></script>
+    <script src="js/subway/game-2up-copylink.js"></script>
+    <script src="js/subway/game-2up-copylink-animation.js"></script>
     <!--End of js-->
 </body>
 
