拆 pc 及banner(OTC)二版

--- a/a_game_1up_qrcode.html
+++ b/a_game_1up_qrcode.html
@@ -18,42 +18,33 @@
 
     <!--css-->
     <link rel="stylesheet" href="css/common.css" type="text/css">
-    <link rel="stylesheet" href="css/game_2up_start.css" type="text/css">
+    <link rel="stylesheet" href="css/game_1up_qrcode.css" type="text/css">
     <!--end of css-->
 
 
 </head>
 
 <body>
-    <div id="game_2up_start">
+
+
+    <div id="game_1up_qrcode">
         <div id="card">
             <img src="img/home/card.png" />
         </div>
-        <div id="contents">
-            <img src="img/game_2up_start/contents.png" />
-        </div>
-        <div id="step4">
-            <img src="img/game_2up_start/step4.png" />
-        </div>
-        <div id="step3">
-            <img src="img/game_2up_start/step3.png" />
-        </div>
-        <div id="step2">
-            <img src="img/game_2up_start/step2.png" />
-        </div>
-        <div id="step1">
-            <img src="img/game_2up_start/step1.png" />
-        </div>
-
-        <div id="login_fb">
-            <a href="game_2up_qrcode.html">
-                <img src="img/game_1up_start/login_fb.png" />
-            </a>
-        </div>
         <div id="title">
             <img src="img/game_1up_start/title.png" />
+        </div>      
+        
+        
+        <div id="use_qrcode">
+            <img src="img/game_1up_start/use_qrcode.png" />
         </div>
-
+        <div id="cycle">
+            <img src="img/game_1up_start/cycle.png" />
+        </div>
+        <div id="qrcode_container">
+            <img src="img/game_1up_start/qrcode_container.png" />
+        </div>
         <div id="logo">
             <img src="img/home/logo.png" />
         </div>
@@ -63,13 +54,13 @@
         <a href="http://www.twsubway.com/www/include/index.php" target="_blank">
             <div id="nav_website" class="buttons-nav_website"></div>
         </a>
-        <a href="top10.html" target="_self">
+        <a href="a_top10.html" target="_self">
             <div id="nav_top10" class="buttons-nav_top10"></div>
         </a>
-        <a href="rule.html" target="_self">
+        <a href="a_rule.html" target="_self">
             <div id="nav_rule" class="buttons-nav_rule"></div>
         </a>
-        <a href="index.html" target="_self">
+        <a href="a_index.html" target="_self">
             <div id="nav_home" class="buttons-nav_home"></div>
         </a>
     </div>
@@ -86,9 +77,8 @@
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
-    <script src="js/subway/navfacebookshare.js"></script>
-    <script src="js/subway/game-2up-start.js"></script>
-    <script src="js/subway/game-2up-start-animation.js"></script>
+    <script src="js/subway/navfacebookshare.js"></script>    
+    <script src="js/subway/game-1up-qrcode-animation.js"></script>
     <!--End of js-->
 </body>
 
