--- a/a_m_2up_copylink.html
+++ b/a_m_2up_copylink.html
@@ -31,35 +31,53 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_otc_home_title">
-            <img src="img/mobile/m_otc_home_title.png" />
+        <div id="m_2up_copylink_pd">
+            <img src="img/mobile/m_2up_copylink_pd.png" />
         </div>
-        <div id="m_otc_home_contents">
-            <img src="img/mobile/m_otc_home_contents.png" />
+        <div id="m_2up_copylink_title">
+            <img src="img/mobile/m_2up_copylink_title.png" />
         </div>
-        <div id="m_otc_home_1up">
-            <a href="m_1up_home.html">
-                <img src="img/mobile/m_otc_home_1up.png" />
+        <div id="m_2up_copylink_contents">
+            <img src="img/mobile/m_2up_copylink_contents.png" />
+        </div>
+        <div id="m_2up_copylink_line_share">
+            <a href="http://line.naver.jp/R/msg/text/?冬天到了別發懶，快和我一起新鮮動吃動，一起拿買一送一優惠！ http://ppt.cc/Gb~v">
+                <img src="img/mobile/m_2up_copylink_line_share.png" />
             </a>
         </div>
-        <div id="m_otc_home_2up">
-            <a href="m_2up_home.html">
-                <img src="img/mobile/m_otc_home_2up.png" />
-            </a>
+        <div id="m_2up_copylink_me_cell">
+            <img src="img/mobile/m_2up_copylink_me_cell.png" />
+        </div>
+        <div id="m_2up_copylink_friend_cell">
+            <img src="img/mobile/m_2up_copylink_friend_cell.png" />
+        </div>
+        <div id="m_2up_copylink_qrcode">
+            <img src="img/mobile/m_2up_copylink_qrcode.png" />
         </div>
 
-        <div id="nav_exchange">
+
+        <!--<div id="nav_exchange">
             <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
-        <!--<div id="nav_home">
-            <img src="img/mobile/nav_home.png" />
+        <div id="nav_home">
+            <a href="m_otc_home.html">
+                <img src="img/mobile/nav_home.png" />
+            </a>
         </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
     </div>
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            setTimeout(function(){
+                window.location="a_m_2up_game.html";
+            },2000);
+        });
+    </script>
 </body>
 
 </html>
