--- a/a_m_2up_fail.html
+++ b/a_m_2up_fail.html
@@ -31,53 +31,48 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_2up_copylink_pd">
-            <img src="img/mobile/m_2up_copylink_pd.png" />
+        <div id="m_2up_fail_bg">
+            <img src="img/mobile/m_2up_fail_bg.png" />
         </div>
-        <div id="m_2up_copylink_title">
-            <img src="img/mobile/m_2up_copylink_title.png" />
+        <div id="m_2up_fail_title">
+            <img src="img/mobile/m_2up_fail_title.png" />
         </div>
-        <div id="m_2up_copylink_contents">
-            <img src="img/mobile/m_2up_copylink_contents.png" />
+        <div id="m_2up_fail_img">
+            <!--<img src="img/mobile/m_2up_fail_img.png" />-->
         </div>
-        <div id="m_2up_copylink_line_share">
-            <a href="http://line.naver.jp/R/msg/text/?冬天到了別發懶，快和我一起新鮮動吃動，一起拿買一送一優惠！ http://ppt.cc/Gb~v">
-                <img src="img/mobile/m_2up_copylink_line_share.png" />
+        <div id="m_2up_fail_friend">
+            <img src="img/mobile/m_2up_fail_friend.png" />
+        </div>
+        <div id="m_2up_fail_number">
+            150 + 150
+            <!--<img src="img/mobile/m_2up_fail_number.png" />-->
+        </div>
+        <div id="m_2up_fail_total_number">
+            999
+            <!--<img src="img/mobile/m_2up_fail_total_number.png" />-->
+        </div>
+        <div id="m_2up_fail_total_again">
+            <a href="a_m_2up_home.html">
+                <img src="img/mobile/m_2up_fail_total_again.png" />
             </a>
         </div>
-        <div id="m_2up_copylink_me_cell">
-            <img src="img/mobile/m_2up_copylink_me_cell.png" />
-        </div>
-        <div id="m_2up_copylink_friend_cell">
-            <img src="img/mobile/m_2up_copylink_friend_cell.png" />
-        </div>
-        <div id="m_2up_copylink_qrcode">
-            <img src="img/mobile/m_2up_copylink_qrcode.png" />
+        <div id="m_2up_fail_total_remark">
+            差<span id="m_2up_fail_total_remark_more">10</span>分就有優惠囉！
+            <!--<img src="img/mobile/m_2up_fail_total_remark.png" />-->
         </div>
 
-
-        <div id="nav_exchange">
+        <!--<div id="nav_exchange">
             <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
         <div id="nav_home">
-            <a href="m_otc_home.html">
-                <img src="img/mobile/nav_home.png" />
-            </a>
-        </div>
+            <img src="img/mobile/nav_home.png" />
+        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
     </div>
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            setTimeout(function(){
-                window.location="m_2up_game.html";
-            },2000);
-        });
-    </script>
 </body>
 
 </html>
