--- a/a_m_2up_home.html
+++ b/a_m_2up_home.html
@@ -38,23 +38,23 @@
             <img src="img/mobile/m_2up_home_contents.png" />
         </div>
         <div id="m_2up_home_go">
-            <a href="m_2up_copylink.html">
+            <a href="a_m_2up_copylink.html">
                 <img src="img/mobile/m_2up_home_go.png" />
             </a>
         </div>
         <div id="m_2up_home_pd">
             <img src="img/mobile/m_2up_home_pd.png" />
         </div>
-        <div id="nav_exchange">
-            <a href="m_coupon_list.html" target="_self">
+        <!--<div id="nav_exchange">
+            <a href="a_m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
-        </div>        
-        <div id="nav_home">
+        </div>-->        
+        <!--<div id="nav_home">
             <a href="m_otc_home.html">
                 <img src="img/mobile/nav_home.png" />
             </a>
-        </div>
+        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
