--- a/a_m_2up_result_friend.html
+++ b/a_m_2up_result_friend.html
@@ -31,19 +31,28 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_1up_home_title">
-            <img src="img/mobile/m_1up_home_title.png" />
+        <div id="m_2up_result_friend_bg">
+            <img src="img/mobile/m_2up_result_friend_bg.png" />
         </div>
-        <div id="m_1up_home_contents">
-            <img src="img/mobile/m_1up_home_contents.png" />
+        <div id="m_2up_result_friend_title">
+            <img src="img/mobile/m_2up_result_friend_title.png" />
         </div>
-        <div id="m_1up_home_go">
-            <a href="m_1up_game.html">
-                <img src="img/mobile/m_1up_home_go.png" />
-            </a>
+        <div id="m_2up_result_friend_img">
+            <!--<img src="img/mobile/m_2up_result_friend_img.png" />-->
         </div>
-        <div id="m_1up_home_pd">
-            <img src="img/mobile/m_1up_home_pd.png" />
+        <div id="m_2up_result_friend_friend">
+            <img src="img/mobile/m_2up_result_friend_friend.png" />
+        </div>
+        <div id="m_2up_result_friend_number">
+            999 + 999
+            <!--<img src="img/mobile/m_2up_result_friend_number.png" />-->
+        </div>
+        <div id="m_2up_result_friend_total_numbe">999
+            <!--<img src="img/mobile/m_2up_result_friend_total_numbe.png" />-->
+        </div>
+        <div id="m_2up_result_friend_contents">
+            <span id="fb_name">george</span>
+            <img src="img/mobile/m_2up_result_friend_contents.png" />
         </div>
 
         <div id="nav_exchange">
@@ -51,8 +60,9 @@
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
-        <div id="nav_home">
-            <a href="m_otc_home.html">
+
+        <div id="nav_home" style="left: 498px;">
+            <a href="b_m_otc_home.html">
                 <img src="img/mobile/nav_home.png" />
             </a>
         </div>
