--- a/a_m_coupon_comfirm.html
+++ b/a_m_coupon_comfirm.html
@@ -30,29 +30,28 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-
-        <!--<div id="m_2up_coupon_coupon1">
-            <img src="img/mobile/m_2up_coupon_coupon1.png" />
+        <div id="m_1up_coupon_comfirm_coupon">
+            <!--<img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
+            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />-->
+            <img src="img/mobile/m_1up_coupon_comfirm_coupon.png" />
         </div>
-        <div id="m_2up_coupon_coupon2">
-            <img src="img/mobile/m_2up_coupon_coupon2.png" />
+
+        <div id="m_2up_coupon_comfirm_use">
+            <a href="a_m_facebook_share.html">
+                <img src="img/mobile/m_2up_coupon_comfirm_use.png" />
+            </a>
+        </div>
+        <div id="m_2up_coupon_comfirm_cancle">
+            <a href="a_m_coupon.html">
+                <img src="img/mobile/m_2up_coupon_comfirm_cancle.png" />
+            </a>
+        </div>
+        <!--<div id="m_2up_coupon_comfirm_coupon1">
+            <img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
+        </div>
+        <div id="m_2up_coupon_comfirm_coupon2">
+            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />
         </div>-->
-        <div id="m_1up_coupon_coupon">
-            <!--<img src="img/mobile/m_2up_coupon_coupon1.png" />
-            <img src="img/mobile/m_2up_coupon_coupon2.png" />-->
-            <img src="img/mobile/m_1up_coupon_coupon.png" />
-        </div>
-        <div id="m_2up_coupon_use">
-            <a href="m_coupon_comfirm.html">
-                <img src="img/mobile/m_2up_coupon_use.png" />
-            </a>
-        </div>
-        <div id="m_2up_coupon_add">
-            <a href="m_coupon_list.html">
-                <img src="img/mobile/m_2up_coupon_add.png" />
-            </a>
-        </div>
-
 
 
         <!--<div id="nav_exchange">
