--- a/a_top10.html
+++ b/a_top10.html
@@ -233,10 +233,10 @@
             <div id="nav_website" class="buttons-nav_website"></div>
         </a>
         <div id="nav_top10" class="buttons-nav_top10  nav_top10_active"></div>
-        <a href="rule.html" target="_self">
+        <a href="a_rule.html" target="_self">
             <div id="nav_rule" class="buttons-nav_rule"></div>
         </a>
-        <a href="index.html" target="_self">
+        <a href="a_index.html" target="_self">
             <div id="nav_home" class="buttons-nav_home"></div>
         </a>
     </div>
