--- a/b_m_2up_fail.html
+++ b/b_m_2up_fail.html
@@ -31,40 +31,44 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_2up_result_friend_bg">
-            <img src="img/mobile/m_2up_result_friend_bg.png" />
+        <div id="m_2up_fail_bg">
+            <img src="img/mobile/m_2up_fail_bg.png" />
         </div>
-        <div id="m_2up_result_friend_title">
-            <img src="img/mobile/m_2up_result_friend_title.png" />
+        <div id="m_2up_fail_title">
+            <img src="img/mobile/m_2up_fail_title.png" />
         </div>
-        <div id="m_2up_result_friend_img">
-            <!--<img src="img/mobile/m_2up_result_friend_img.png" />-->
+        <div id="m_2up_fail_img">
+            <!--<img src="img/mobile/m_2up_fail_img.png" />-->
         </div>
-        <div id="m_2up_result_friend_friend">
-            <img src="img/mobile/m_2up_result_friend_friend.png" />
+        <div id="m_2up_fail_friend">
+            <img src="img/mobile/m_2up_fail_friend.png" />
         </div>
-        <div id="m_2up_result_friend_number">
-            999 + 999
-            <!--<img src="img/mobile/m_2up_result_friend_number.png" />-->
+        <div id="m_2up_fail_number">
+            150 + 150
+            <!--<img src="img/mobile/m_2up_fail_number.png" />-->
         </div>
-        <div id="m_2up_result_friend_total_numbe">999
-            <!--<img src="img/mobile/m_2up_result_friend_total_numbe.png" />-->
+        <div id="m_2up_fail_total_number">
+            999
+            <!--<img src="img/mobile/m_2up_fail_total_number.png" />-->
         </div>
-        <div id="m_2up_result_friend_contents">
-            <img src="img/mobile/m_2up_result_friend_contents.png" />
+        <div id="m_2up_fail_total_again">
+            <a href="b_m_2up_home.html">
+                <img src="img/mobile/m_2up_fail_total_again.png" />
+            </a>
+        </div>
+        <div id="m_2up_fail_total_remark">
+            差<span id="m_2up_fail_total_remark_more">10</span>分就有優惠囉！
+            <!--<img src="img/mobile/m_2up_fail_total_remark.png" />-->
         </div>
 
-        <div id="nav_exchange">
+        <!--<div id="nav_exchange">
             <a href="m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
-
-        <div id="nav_home" style="left: 498px;">
-            <a href="m_otc_home.html">
-                <img src="img/mobile/nav_home.png" />
-            </a>
-        </div>
+        <div id="nav_home">
+            <img src="img/mobile/nav_home.png" />
+        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
