--- a/b_m_2up_game.html
+++ b/b_m_2up_game.html
@@ -31,29 +31,31 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_2up_result_me_bg">
-            <img src="img/mobile/m_2up_result_me_bg.png" />
+        <div id="m_2up_game_bg">
+            <img src="img/mobile/m_2up_game_bg.png" />
         </div>
-        <div id="m_2up_result_me_title">
-            <img src="img/mobile/m_2up_result_me_title.png" />
+        
+        <div id="m_2up_game_countdown">
+           3
+            <!--<img src="img/mobile/m_2up_game_countdown.png" />-->
         </div>
-        <div id="m_2up_result_me_img">
-            <!--<img src="img/mobile/m_2up_result_me_img.png" />-->
+        <div id="m_2up_game_hand_container">
+            <div id="m_2up_game_hand">
+                <img src="img/mobile/m_2up_game_hand.png" />
+            </div>
         </div>
-        <div id="m_2up_result_me_friend">
-            <img src="img/mobile/m_2up_result_me_friend.png" />
+        <div id="m_2up_game_time">
+           00:60
+            <img src="img/mobile/m_2up_game_time.png" />
         </div>
-        <div id="m_2up_result_me_number">
-            150 + 150
-            <!--<img src="img/mobile/m_2up_result_me_number.png" />-->
+        <div id="m_2up_game_contents">
+            <img src="img/mobile/m_2up_game_contents.png" />
         </div>
-        <div id="m_2up_result_me_coupon">
-            <a href="m_coupon.html">
-                <img src="img/mobile/m_2up_result_me_coupon.png" />
-            </a>
+        <div id="m_2up_game_number">0
+            <!--<img src="img/mobile/m_2up_game_number.png" />-->
         </div>
-        <div id="m_2up_result_me_total_number">
-            <!--<img src="img/mobile/m_2up_result_me_total_number.png" />-->999
+        <div id="m_2up_game_ico">
+            <img src="img/mobile/m_2up_game_ico.png" />
         </div>
 
         <!--<div id="nav_exchange">
@@ -68,6 +70,15 @@
             <img src="img/mobile/logo.png" />
         </div>
     </div>
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery.queryloader2.js"></script>
+    <script src="js/BaseUtil.min.js"></script>
+    <script src="js/shake.js"></script>
+    <script src="js/UserAgent.js"></script>
+    <script src="js/purl.js"></script>
+    <script src="js/greensock/TweenMax.js"></script>
+    <script src="js/subway/b_m_2up_game.js"></script>
+    
 </body>
 
 </html>
