--- a/b_m_2up_home.html
+++ b/b_m_2up_home.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>title</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />  
+    <meta name="description" content="" />
+    <meta name="author" content="georgelynch" />
     <!--for mobile,it's website can delete this line-->
     <meta name="viewport" content="width=640, user-scalable=no">
 
     <!--facebook meta-->
-    <meta property="og:title" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
+    <meta property="og:title" content="this is title" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.google.com" />
     <meta property="og:image" content="http://www.google.com/img/_fb_share.png" />
     <meta property="og:site_name" content="this is site name" />
-    <meta property="og:description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
+    <meta property="og:description" content="this is description" />
     <!--End of facebook meta-->
 
     <link rel="stylesheet" href="css/mobile.css" type="text/css">
@@ -30,24 +31,30 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        
-        <div id="m_facebook_share_share">
-            <img src="img/mobile/m_facebook_share_share.png" />
+        <div id="m_2up_home_title">
+            <img src="img/mobile/m_2up_home_title.png" />
         </div>
-        <div id="m_facebook_share_contents">
-            <img src="img/mobile/m_facebook_share_contents.png" />
+        <div id="m_2up_home_contents">
+            <img src="img/mobile/m_2up_home_contents.png" />
         </div>
-        
-        <div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+        <div id="m_2up_home_go">
+            <a href="b_m_2up_copylink.html">
+                <img src="img/mobile/m_2up_home_go.png" />
+            </a>
+        </div>
+        <div id="m_2up_home_pd">
+            <img src="img/mobile/m_2up_home_pd.png" />
+        </div>
+        <!--<div id="nav_exchange">
+            <a href="b_m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
-        </div>
-        <div id="nav_home">
-            <a href="m_otc_home.html">
+        </div>-->        
+        <!--<div id="nav_home">
+            <a href="b_m_otc_home.html">
                 <img src="img/mobile/nav_home.png" />
             </a>
-        </div>
+        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
