--- a/b_m_otc_home.html
+++ b/b_m_otc_home.html
@@ -30,36 +30,30 @@
         <div id="bg-snow">
             <img src="img/mobile/bg-snow.png" />
         </div>
-        <div id="m_1up_coupon_comfirm_coupon">
-            <!--<img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
-            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />-->
-            <img src="img/mobile/m_1up_coupon_comfirm_coupon.png" />
-        </div>
 
-        <div id="m_2up_coupon_comfirm_use">
-            <a href="m_facebook_share.html">
-                <img src="img/mobile/m_2up_coupon_comfirm_use.png" />
+        <div id="m_otc_home_title">
+            <img src="img/mobile/m_otc_home_title.png" />
+        </div>
+        <div id="m_otc_home_contents">
+            <img src="img/mobile/m_otc_home_contents.png" />
+        </div>
+        <div id="m_otc_home_1up">
+            <a href="b_m_1up_home.html">
+                <img src="img/mobile/m_otc_home_1up.png" />
             </a>
         </div>
-        <div id="m_2up_coupon_comfirm_cancle">
-            <a href="m_coupon.html">
-                <img src="img/mobile/m_2up_coupon_comfirm_cancle.png" />
+        <div id="m_otc_home_2up">
+            <a href="b_m_2up_home.html">
+                <img src="img/mobile/m_otc_home_2up.png" />
             </a>
         </div>
-        <!--<div id="m_2up_coupon_comfirm_coupon1">
-            <img src="img/mobile/m_2up_coupon_comfirm_coupon1.png" />
-        </div>
-        <div id="m_2up_coupon_comfirm_coupon2">
-            <img src="img/mobile/m_2up_coupon_comfirm_coupon2.png" />
-        </div>-->
 
-
-        <!--<div id="nav_exchange">
-            <a href="m_coupon_list.html"  target="_self">
+        <div id="nav_exchange">
+            <a href="b_m_coupon_list.html" target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
-        <div id="nav_home">
+        <!--<div id="nav_home">
             <img src="img/mobile/nav_home.png" />
         </div>-->
         <div id="logo">
