--- a/a_game_1up_start.html
+++ b/a_game_1up_start.html
@@ -18,7 +18,7 @@
 
     <!--css-->
     <link rel="stylesheet" href="css/common.css" type="text/css">
-    <link rel="stylesheet" href="css/game_1up_qrcode.css" type="text/css">
+    <link rel="stylesheet" href="css/game_1up_start.css" type="text/css">
     <!--end of css-->
 
 
@@ -27,24 +27,31 @@
 <body>
 
 
-    <div id="game_1up_qrcode">
+    <div id="game_1up_start">
         <div id="card">
             <img src="img/home/card.png" />
         </div>
         <div id="title">
             <img src="img/game_1up_start/title.png" />
-        </div>      
-        
-        
-        <div id="use_qrcode">
-            <img src="img/game_1up_start/use_qrcode.png" />
         </div>
-        <div id="cycle">
-            <img src="img/game_1up_start/cycle.png" />
+        <div id="use">
+            <img src="img/game_1up_start/use.png" />
         </div>
-        <div id="qrcode_container">
-            <img src="img/game_1up_start/qrcode_container.png" />
+        <div id="step1">
+            <img src="img/game_1up_start/step1.png" />
         </div>
+        <div id="step2">
+            <img src="img/game_1up_start/step2.png" />
+        </div>
+        <div id="step3">
+            <img src="img/game_1up_start/step3.png" />
+        </div>
+        <div id="login_fb">
+            <a href="a_game_1up_qrcode.html">
+                <img src="img/game_1up_start/login_fb.png" />
+            </a>
+        </div>
+
         <div id="logo">
             <img src="img/home/logo.png" />
         </div>
@@ -54,13 +61,13 @@
         <a href="http://www.twsubway.com/www/include/index.php" target="_blank">
             <div id="nav_website" class="buttons-nav_website"></div>
         </a>
-        <a href="top10.html" target="_self">
+        <a href="a_top10.html" target="_self">
             <div id="nav_top10" class="buttons-nav_top10"></div>
         </a>
-        <a href="rule.html" target="_self">
+        <a href="a_rule.html" target="_self">
             <div id="nav_rule" class="buttons-nav_rule"></div>
         </a>
-        <a href="index.html" target="_self">
+        <a href="a_index.html" target="_self">
             <div id="nav_home" class="buttons-nav_home"></div>
         </a>
     </div>
@@ -77,8 +84,9 @@
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
-    <script src="js/subway/navfacebookshare.js"></script>    
-    <script src="js/subway/game-1up-qrcode-animation.js"></script>
+    <script src="js/subway/navfacebookshare.js"></script>
+    <script src="js/subway/game-1up-start.js"></script>
+    <script src="js/subway/game-1up-start-animation.js"></script>
     <!--End of js-->
 </body>
 
