--- a/a_game_2up_copylink.html
+++ b/a_game_2up_copylink.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />    
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
 
     <!--facebook meta-->
     <meta property="og:title" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
@@ -18,36 +18,31 @@
 
     <!--css-->
     <link rel="stylesheet" href="css/common.css" type="text/css">
-    <link rel="stylesheet" href="css/rule.css" type="text/css">
+    <link rel="stylesheet" href="css/game_2up_copylink.css" type="text/css">
     <!--end of css-->
 
 
 </head>
 
 <body>
-    <div id="rule">
+    <div id="game_2up_copylink">
         <div id="card">
             <img src="img/home/card.png" />
         </div>
-        <div id="border">
-            <img src="img/rule/border.png" />
+        <div id="copy_contents">
+            <img src="img/game_2up_start/copy_contents.png" />
+        </div>
+        <div id="fb_img">
+            <!--<img src="img/game_2up_start/fb_img.png" />-->
+        </div>
+        <div id="copyurl">
+          <div id="copyurl_container">
+              冬天到了別發懶，快和我一起新鮮動吃動，一起拿買一送一優惠！<span id="share_links">http://ppt.cc/Gb~v</span>(請以手機開啟活動網址)
+          </div>
+           <div id="copy_links"><img src="img/game2up_copylink/copy.png" alt="copy links"></div>          
         </div>
         <div id="title">
-            <img src="img/rule/title.png" />
-        </div>
-        <div id="contents">
-            <div class="scrollbar">
-                <div class="track">
-                    <div class="thumb">
-                        <!--<div class="end"></div>-->
-                    </div>
-                </div>
-            </div>
-            <div class="viewport">
-                <div class="overview">
-                    <img src="img/rule/contents.png" />
-                </div>
-            </div>
+            <img src="img/game_1up_start/title.png" />
         </div>
         <div id="logo">
             <img src="img/home/logo.png" />
@@ -55,18 +50,21 @@
     </div>
 
 
+
+
+
     <div id="nav">
         <div id="nav_fb" class="buttons-nav_fb"></div>
         <a href="http://www.twsubway.com/www/include/index.php" target="_blank">
             <div id="nav_website" class="buttons-nav_website"></div>
         </a>
-        <a href="top10.html" target="_self">
+        <a href="a_top10.html" target="_self">
             <div id="nav_top10" class="buttons-nav_top10"></div>
         </a>
-
-        <div id="nav_rule" class="buttons-nav_rule nav_rule_active"></div>
-
-        <a href="index.html" target="_self">
+        <a href="a_rule.html" target="_self">
+            <div id="nav_rule" class="buttons-nav_rule"></div>
+        </a>
+        <a href="a_index.html" target="_self">
             <div id="nav_home" class="buttons-nav_home"></div>
         </a>
     </div>
@@ -79,13 +77,14 @@
     <script src="js/respond.js"></script>
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.queryloader2.js"></script>
-    <script src="js/jquery.tinyscrollbar.min.js"></script>
     <script src="js/BaseUtil.min.js"></script>
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
+    <script src="js/jquery.clipboard.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
     <script src="js/subway/navfacebookshare.js"></script>
-    <script src="js/subway/rule.js"></script>
+    <script src="js/subway/game-2up-copylink.js"></script>
+    <script src="js/subway/game-2up-copylink-animation.js"></script>
     <!--End of js-->
 </body>
 
