--- a/a_index.html
+++ b/a_index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Subway 解FUN冬天 一起新鮮動吃動吃</title>
+    <title>Subway 解FUN冬天  一起新鮮動吃動吃</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
+    <meta name="description" content="Subway 解FUN冬天  一起新鮮動吃動吃" />    
 
     <!--facebook meta-->
     <meta property="og:title" content="Subway 解FUN冬天  一起新鮮動吃動吃" />
@@ -18,7 +18,7 @@
 
     <!--css-->
     <link rel="stylesheet" href="css/common.css" type="text/css">
-    <link rel="stylesheet" href="css/game_1up_qrcode.css" type="text/css">
+    <link rel="stylesheet" href="css/home.css" type="text/css">
     <!--end of css-->
 
 
@@ -27,23 +27,28 @@
 <body>
 
 
-    <div id="game_1up_qrcode">
+    <div id="home">
         <div id="card">
             <img src="img/home/card.png" />
         </div>
+        <div id="product">
+            <img src="img/home/product.png" />
+        </div>
         <div id="title">
-            <img src="img/game_1up_start/title.png" />
-        </div>      
-        
-        
-        <div id="use_qrcode">
-            <img src="img/game_1up_start/use_qrcode.png" />
+            <img src="img/home/title.png" />
         </div>
-        <div id="cycle">
-            <img src="img/game_1up_start/cycle.png" />
+        <div id="play_game_1up">
+            <a href="a_game_1up_start.html">
+                <img src="img/home/play_game_1up.png" />
+            </a>
         </div>
-        <div id="qrcode_container">
-            <img src="img/game_1up_start/qrcode_container.png" />
+        <div id="play_game_2up">
+            <a href="a_game_2up_start.html">
+                <img src="img/home/play_game_2up.png" />
+            </a>
+        </div>
+        <div id="SP">
+            <img src="img/home/SP.png" />
         </div>
         <div id="logo">
             <img src="img/home/logo.png" />
@@ -54,15 +59,13 @@
         <a href="http://www.twsubway.com/www/include/index.php" target="_blank">
             <div id="nav_website" class="buttons-nav_website"></div>
         </a>
-        <a href="top10.html" target="_self">
+        <a href="a_top10.html" target="_self">
             <div id="nav_top10" class="buttons-nav_top10"></div>
         </a>
-        <a href="rule.html" target="_self">
+        <a href="a_rule.html" target="_self">
             <div id="nav_rule" class="buttons-nav_rule"></div>
         </a>
-        <a href="index.html" target="_self">
-            <div id="nav_home" class="buttons-nav_home"></div>
-        </a>
+        <div id="nav_home" class="buttons-nav_home nav_home_active"></div>
     </div>
     <div id="preloading">
         <div id="loading">
@@ -77,8 +80,9 @@
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
-    <script src="js/subway/navfacebookshare.js"></script>    
-    <script src="js/subway/game-1up-qrcode-animation.js"></script>
+    <script src="js/subway/navfacebookshare.js"></script>
+    <script src="js/subway/home.js"></script>
+    <script src="js/subway/home-animation.js"></script>
     <!--End of js-->
 </body>
 
