--- a/b_m_1up_game.html
+++ b/b_m_1up_game.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div id="m_1up_game_success_coupon">
-            <a href="m_coupon.html">
+            <a href="b_m_coupon.html">
                 <img src="img/mobile/m_1up_game_success_coupon.png" />
             </a>
         </div>
@@ -101,7 +101,7 @@
     <script src="js/UserAgent.js"></script>
     <script src="js/purl.js"></script>
     <script src="js/greensock/TweenMax.js"></script>
-    <script src="js/subway/m_1up_game.js"></script>
+    <script src="js/subway/b_m_1up_game.js"></script>
 </body>
 
 </html>
