--- a/b_m_coupon.html
+++ b/b_m_coupon.html
@@ -31,44 +31,38 @@
             <img src="img/mobile/bg-snow.png" />
         </div>
 
-        <div id="m_2up_fail_bg">
-            <img src="img/mobile/m_2up_fail_bg.png" />
+        <!--<div id="m_2up_coupon_coupon1">
+            <img src="img/mobile/m_2up_coupon_coupon1.png" />
         </div>
-        <div id="m_2up_fail_title">
-            <img src="img/mobile/m_2up_fail_title.png" />
+        <div id="m_2up_coupon_coupon2">
+            <img src="img/mobile/m_2up_coupon_coupon2.png" />
+        </div>-->
+        <div id="m_1up_coupon_coupon">
+            <!--<img src="img/mobile/m_2up_coupon_coupon1.png" />
+            <img src="img/mobile/m_2up_coupon_coupon2.png" />-->
+            <img src="img/mobile/m_1up_coupon_coupon.png" />
         </div>
-        <div id="m_2up_fail_img">
-            <!--<img src="img/mobile/m_2up_fail_img.png" />-->
-        </div>
-        <div id="m_2up_fail_friend">
-            <img src="img/mobile/m_2up_fail_friend.png" />
-        </div>
-        <div id="m_2up_fail_number">
-            150 + 150
-            <!--<img src="img/mobile/m_2up_fail_number.png" />-->
-        </div>
-        <div id="m_2up_fail_total_number">
-            999
-            <!--<img src="img/mobile/m_2up_fail_total_number.png" />-->
-        </div>
-        <div id="m_2up_fail_total_again">
-            <a href="m_2up_home.html">
-                <img src="img/mobile/m_2up_fail_total_again.png" />
+        <div id="m_2up_coupon_use">
+            <a href="b_m_coupon_comfirm.html">
+                <img src="img/mobile/m_2up_coupon_use.png" />
             </a>
         </div>
-        <div id="m_2up_fail_total_remark">
-            差<span id="m_2up_fail_total_remark_more">10</span>分就有優惠囉！
-            <!--<img src="img/mobile/m_2up_fail_total_remark.png" />-->
+        <div id="m_2up_coupon_add">
+            <a href="b_m_coupon_list.html">
+                <img src="img/mobile/m_2up_coupon_add.png" />
+            </a>
         </div>
 
-        <div id="nav_exchange">
-            <a href="m_coupon_list.html" target="_self">
+
+
+        <!--<div id="nav_exchange">
+            <a href="m_coupon_list.html"  target="_self">
                 <img src="img/mobile/nav_exchange.png" />
             </a>
         </div>
         <div id="nav_home">
             <img src="img/mobile/nav_home.png" />
-        </div>
+        </div>-->
         <div id="logo">
             <img src="img/mobile/logo.png" />
         </div>
